# stirling

./: .flake8  .gitattributes  .gitignore  FirstVideoObjectDetection.py  LICENSE  README.md  args.py  codealike.json  definitions.py  ffprobeoutput.json  helpers.py  job-sample.json  job.json  main.py  myfile.txt  probe.py  pyproject.toml  requirements.py  requirements.txt  source.m3u8  stirling-engine.code-workspace  test.py  test2.py  test4.py
.github/workflows/: dependency-review.yml  poetry.yml
.run/: StirlingContinuous.run.xml  pytest for stirling.run.xml
.trunk/: actions  notifications  trunk.yaml
config/: audio.json  files.json  job.json  video.json
config/frameworks/: ffmpeg.json
config/plugins/: audio.json  video.json
core/: args.py  audio.py  core.py  definitions.py  encoder.py  encoders.py  errors.py  framework.py  helpers.py  job.py  jobs.py  probe.py  pytorch.py  strings.py  video.py
docs/: overview.graffle
examples/: source.mp4.probe.json
plugins/: audio.py  frames.py  hls.py  objects.py  peaks.py  plugins.py  transcript.py  video.py
stirling/: __init__.py  config.py  container.py  core.py  dependencies.py  encoder.py  encodings.py  errors.py  framework.py  job.py  logger.py  typing.py  utilities.py
stirling/codecs/: __init__.py  base.py
stirling/command/: base.py  local.py
stirling/containers/: __init__.py  base.py
stirling/encoders/: av1.py
stirling/frameworks/: __init__.py  base.py  ffmpeg.py  get.py  media_info.py
stirling/plugins/: core.py
stirling/tests/: _test_dependencies.py  test_ffmpeg.py
(+33 files in other folders)
