[tool.poetry]
name = "stirling"
version = "0.1.0"
description = ""
authors = ["keepinghistory <info@keepinghistory.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
requests = ">=2.28.1"
validators = ">=0.20.0"
argunparse = ">=0.1.3"
mtcnn = ">=0.1.1"
torch = ">=1.12.1"
opencv-python = ">=4.6.0.66"
simpleeval = ">=0.9.12"
networkx = ">=2.8.7"
pydantic = ">=1.10.9"
strenum = "^0.4.9"
multipledispatch = "^0.6.0"
flake8 = "^6.0.0"
jupyter = "^1.0.0"
dataclasses-json = "^0.5.8"
pylint = "^2.17.4"
langcodes = "^3.3.0"
colored = "^1.4.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = ">=7.2.1"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3
